--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,14 +1,14 @@
 <div class="main-container">
+<% if current_user %>
 <h1 id="welcome">Welcome to Viagg.io</h1>
-<h3 id="explanation">
-  <p>It's Italian for "travel."</p>
-  <p>It lets you share your adventures.</p>
-</h3>
-<% if @user %>
 <h2><%= link_to "Create a Trip!", new_trip_path %></h2>
 <p><%= link_to "Or check out all trips", trips_path  %></p>
 <p><%= link_to "Or check out all users", users_path  %></p>
 <% else %>
+<h3 id="explanation">
+  <p>It's Italian for "travel."</p>
+  <p>It lets you share your adventures.</p>
+</h3>
 <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
 <% end %>
 </div>
