--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,13 +1,14 @@
 @import "variables";
 @import "mixins";
 
-/* ------ Globals ------- */
+/* ------ Defaults ------- */
 a {
   color: $black;
   text-decoration: none;
 }
 h1 {
   font-size: 72px;
+  margin: 72px 0;
 }
 ul {
   list-style-type: none;
@@ -22,13 +23,8 @@ h1#welcome {
   margin-bottom: 0;
 }
 h3#explanation {
-  margin-top: 12px;
-  margin-bottom: 72px;
+  margin-bottom: 64px;
   font-size: 28px;
-  // font-weight: 300;
-  // font-style: italic;
-  // width: 100%;
-  // text-align: right;
 }
 .main-container {
   @include narrow-container;
@@ -38,15 +34,17 @@ h3#explanation {
 }
 body {
   background-image: url($bg-img);
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-size: cover;
 }
 nav {
+  position: fixed;
+  top: 0;
   width: 100%;
-  height: 20px;
+  height: 24px;
   background: $nav;
-  line-height: 20px;
-  font-size: 12px;
+  line-height: 24px;
+  font-size: large;
   color: $white;
 }
 nav a {
@@ -62,4 +60,7 @@ nav a {
   a {
     text-decoration: underline;
   }
+}
+.menu {
+  margin-top: 72px;
 }
