--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
 	<h1>Photos</h1>
 
-	<% if @photos %>
+	<% if @trip.photos.any? %>
 		<p>Photo List:</p>
 		<p>Trip ID in session: <%= session[:current_trip] %></p>
 		<ul>
-			<% @photos.each do |photo| %>
-				<li><%= link_to photo.url, photo_path(photo),:target => "_blank" %> - Trip: <%= photo.trip_id %></li>
+			<% @trip.photos.each do |photo| %>
+				<li><%= link_to photo.url, trip_photo_path(photo.trip, photo),:target => "_blank" %> - Trip: <%= photo.trip_id %></li>
 			<% end %>
 		</ul>
 	<% end %>
