--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -19,7 +19,7 @@
   </div>
 <% end %>
 
-<%= form_for(Photo.new, method: :put, html: {class: 'hidden', id: 'editForm'} ) do |f| %>
+<%= form_for([@trip, Photo.new], method: :put, html: {class: 'hidden', id: 'editForm'}) do |f| %>
     <%= f.label :caption, 'Caption:' %>
     <%= f.text_field :caption, {class: 'caption'} %><br>
     <%= f.label :date, 'Date:' %>
