--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -3,3 +3,4 @@ $bg-img: 'http://maps.googleapis.com/maps/api/staticmap?zoom=2&size=640x640&scal
 $black: #222;
 $white: #eee;
 $nav: #1FB5BE;
+$main-font: 'Asap', 'Helvetica', sans-serif;
