--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -11,6 +11,6 @@
       <p><em>Viaggio</em>'s Italian for "travel."</p>
       <p>Viagg.io lets you share your travels.</p>
     </h3>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+    <%= link_to raw('<i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook'), "/auth/facebook", id: "sign_in" %>
   <% end %>
 </div>
