turned off scroll zoom

--- a/app/assets/javascripts/gmap.js.erb
+++ b/app/assets/javascripts/gmap.js.erb
@@ -40,7 +40,7 @@ var gmap = {
       keyboardShortcuts: true,
       mapTypeControl: true,
       panControl: false,
-      scrollwheel: true,
+      scrollwheel: false,
       streetViewControl: false,
       zoomControl: false
     };
