added captions to trip show page

--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -125,3 +125,9 @@ form.edit_trip {
 #trip-title {
   margin-left: 3%;
 }
+.photo-caption {
+  font-size: 18px;
+  padding: 8px;
+  background: $white;
+  border-radius: 8px;
+}
