--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -8,11 +8,16 @@
 <div class="photos-wrapper">
   <% if @photos %>
     <% @photos.each do |photo|%>
-        <%= image_tag photo.url, class: 'photo', data: {lat: photo.lat, lng: photo.long}%>
-        <br>
+      <%= image_tag photo.url, class: 'photo', data: {lat: photo.lat, lng: photo.long}%>
+      <% if photo.caption != "" %>
+        <div class="photo-caption">
+          <%= photo.caption %>
+        </div>
+      <% end %>
     <% end %>
   <% end %>
 </div>
+
 
 <svg class="main-svg"></svg>
 
