--- a/app/views/trips/_photo_details.html.erb
+++ b/app/views/trips/_photo_details.html.erb
@@ -1,4 +1,4 @@
-<div data-photo-id="<%=photo.id%>" data-trip-id="<%=@trip.id%>">
+<div class="photo-info" data-photo-id="<%=photo.id%>" data-trip-id="<%=@trip.id%>">
     <div class='photo_caption'><%=photo.caption%></div>
     <div class='photo_lat'><%=photo.lat%></div>
     <div class='photo_long'><%=photo.long%></div>
