revised copy on landing page

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -9,7 +9,7 @@
   <% else %>
     <h3 id="explanation">
       <p><em>Viaggio</em>'s Italian for "travel."</p>
-      <p>Viagg.io lets you share your travels.</p>
+      <p><em>Viagg.io</em> lets you share your travel photos and stories.</p>
     </h3>
     <%= link_to raw('<i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook'), "/auth/facebook", id: "sign_in" %>
   <% end %>
