revised from 'create a trip' to 'add trip'

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
   <h1 id="welcome">Welcome to Viagg.io</h1>
   <% if current_user %>
     <div class="menu">
-      <h2><%= link_to "Create a Trip!", new_trip_path %></h2>
+      <h2><%= link_to "Add a Trip!", new_trip_path %></h2>
       <p><%= link_to "Or check out all trips", trips_path  %></p>
       <p><%= link_to "Or check out all users", users_path  %></p>
     </div>
