--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -8,7 +8,7 @@
 		<% end %>
 	</ul>
 
-	<%= link_to "Create a New Trip", new_trip_path %>
+	<%= link_to "Add a Trip", new_trip_path %>
 
 	<% end %>
 </div>
