--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,5 +1,5 @@
 <div class="main-container">
-	<h1>Create a new trip</h1>
+	<h1>Add a trip</h1>
 	<%= form_for @trip do |f| %>
 		<%= f.label :name %>
 		<%= f.text_field :name, :placeholder => 'e.g., "Road Trip 2013"' %>
