--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
 <div class="user-container">
 	<% if @user == @user_on_page %>
-	<h1>My Profile</h1>
-	<h2>Check out my Trips:</h2>
+	<h1>My Trips</h1>
 	<% else %>
 	<h1>Welcome to the profile of <%= @user_on_page.name %></h1>
 	<h2>Check out <%= @user_on_page.name %>'s Trips:</h2>
