--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -4,7 +4,8 @@
 /* ------ Defaults ------- */
 body {
   background-image: url($bg-img);
-  background-repeat: repeat-y;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 a {
@@ -44,7 +45,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 24px;
+  height: 26px;
   background: $nav;
   line-height: 24px;
   font-size: large;
