--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -51,6 +51,7 @@
 </div>
 <script>
 $(document).ready(function() {
+  $('.datepicker').datepicker({dateFormat:'yy-mm-dd'});
   EditButton.initialize();
   DeleteButton.initialize();
   imgur_uploader();
