--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -20,34 +20,35 @@
   @include info-link;
 }
 
-div.update-buttons {
-  display: inline-block;
-  width: 100%;
-  text-align: right;
-  margin: 2px 0 -30px 0;
-}
+// div.update-buttons {
+//   display: inline-block;
+//   width: 100%;
+//   text-align: right;
+//   margin: 2px 0 -30px 0;
+//   visibility: hidden;
+// }
 
-.edit-button, .delete-button {
-  color: $nav;
-  padding: 4px 18px;
-  font-size: 14px;
-  background: $white;
-}
+// .edit-button, .delete-button {
+//   color: $nav;
+//   padding: 4px 18px;
+//   font-size: 14px;
+//   background: $white;
+// }
 
-.edit-button {
-  border-top-left-radius: 8px;
-  &:hover {
-    -webkit-box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
-    -moz-box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
-    box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
-  }
-}
+// .edit-button {
+//   border-top-left-radius: 8px;
+//   &:hover {
+//     -webkit-box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
+//     -moz-box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
+//     box-shadow: -5px -5px 19px -6px rgba(0,0,0,0.5);
+//   }
+// }
 
-.delete-button {
-  border-top-right-radius: 8px;
-  &:hover {
-    -webkit-box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
-    -moz-box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
-    box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
-  }
-}
+// .delete-button {
+//   border-top-right-radius: 8px;
+//   &:hover {
+//     -webkit-box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
+//     -moz-box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
+//     box-shadow: 5px -5px 19px -6px rgba(0,0,0,0.5);
+//   }
+// }
