--- a/app/views/trips/_photo_details.html.erb
+++ b/app/views/trips/_photo_details.html.erb
@@ -4,5 +4,5 @@
     <div class='photo_long'><%=photo.long%></div>
     <div class='photo_date'><%=photo.display_date%></div>
     <div><a href="#" class="delete_button">Delete</a> | 
-    <%= link_to "Edit", edit_trip_photo_path(photo.trip), {class: 'edit_button'} %></div>
+    <%= link_to "Edit", edit_trip_photo_path(photo.trip_id), {class: 'edit_button'} %></div>
 </div>
