cleaned up trip edit page

--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -150,6 +150,10 @@ form.edit_trip {
   width: 50px;
   margin: 10px 0 0 20px;
 }
+.delete_button {
+  color: red;
+  font-size: 24px;
+}
 
 /* ------- Index ------- */
 .trips-container {
