widened enter an address and added hover for find on map

--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -163,6 +163,12 @@ form.edit_trip {
 .delete_button {
   color: red;
 }
+.locator-button {
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .photo_date {
   font-size: 14px;
   font-style: italic;
