--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -12,5 +12,6 @@
       <p><em>Viagg.io</em> lets you share your travel photos and stories.</p>
     </h3>
     <%= link_to raw('<i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook'), "/auth/facebook", id: "sign_in" %>
+    <p class="warning">Closed beta. Invite Only.<p>
   <% end %>
 </div>
