--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -10,9 +10,9 @@ form.new_trip {
 .new_trip label, input {
   display: inline-block;
 }
-.new_trip label {
-  width: 72px;
-}
+// .new_trip label {
+//   width: 72px;
+// }
 .new_trip input {
   width: 98%;
   height: 2em;
