--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -31,7 +31,7 @@
 
 <script>
 	$(document).ready(function() {
-	  gmap.initialize();
+	  gmap.initialize("<%= @trip.location if @trip.location %>");
     ViewPort.initialize();
 	});
 </script>
