--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,4 @@
+<div id="fb-root"></div>
 <div class="main-container">
   <h1 id="welcome">Welcome to Viagg.io</h1>
   <% if current_user %>
@@ -11,7 +12,10 @@
       <p><em>Viaggio</em>'s Italian for "travel."</p>
       <p><em>Viagg.io</em> lets you share your travel photos and stories.</p>
     </h3>
-    <%= link_to raw('<i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook'), "/auth/facebook", id: "sign_in" %>
+    <a id="sign_in" href="/auth/facebook"><i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook </a> 
     <p class="warning">Closed beta. Invite Only.<p>
   <% end %>
 </div>
+<script>
+  Facebook.initialize();
+</script>
