--- a/app/assets/javascripts/facebook.js.erb
+++ b/app/assets/javascripts/facebook.js.erb
@@ -1,18 +1,20 @@
 
 var Facebook = {
   initialize: function() {
+    console.log('initialize');
     $('#sign_in').on('click', Facebook.login);
   },
   login: function(e) {
-    console.log(e);
+    console.log('login');
     e.preventDefault();
     FB.init({
-      appId      : <%= ENV['FACEBOOK_APP_ID'] %>, // App ID
-      channelUrl : '//viagg.io/channel.html', // Channel File
+      appId      : <%=ENV['FACEBOOK_APP_ID']%>, // App ID
+      channelUrl : '<%=root_path%>' + '/channel.html', // Channel File
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
       xfbml      : true  // parse XFBML
     });
+    FB.login(function(response){}, {scope: "email,user_events,user_location,user_photos"});
   },
   createUserSuccess: function(e) {
     location.reload();
@@ -34,6 +36,7 @@ var Facebook = {
   // whenever someone who was previously logged out tries to log in again, the correct case below 
   // will be handled. 
   FB.Event.subscribe('auth.authResponseChange', function(response) {
+    console.log('auth change');
     // Here we specify what we do with the response anytime this event occurs. 
     if (response.status === 'connected') {
       // The response object is returned with a status field that lets the app know the current
@@ -55,14 +58,14 @@ var Facebook = {
       // (1) JavaScript created popup windows are blocked by most browsers unless they 
       // result from direct interaction from people using the app (such as a mouse click)
       // (2) it is a bad experience to be continually prompted to login upon page load.
-      FB.login({scope: "email,user_events,user_location,user_photos"});
+      FB.login(function(response){}, {scope: "email,user_events,user_location,user_photos"});
     } else {
       // In this case, the person is not logged into Facebook, so we call the login() 
       // function to prompt them to do so. Note that at this stage there is no indication
       // of whether they are logged into the app. If they aren't then they'll see the Login
       // dialog right after they log in to Facebook. 
       // The same caveats as above apply to the FB.login() call here.
-      FB.login({scope: "email,user_events,user_location,user_photos"});
+      FB.login(function(response){}, {scope: "email,user_events,user_location,user_photos"});
     }
   });
 };
