arbitrary change to initiate push

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "mixins";
-
+/*arbitrary change*/
 /* ------ Defaults ------- */
 body {
   background-image: url($bg-img);
