--- a/app/assets/javascripts/facebook.js.erb
+++ b/app/assets/javascripts/facebook.js.erb
@@ -8,7 +8,7 @@ var Facebook = {
     console.log('login');
     e.preventDefault();
     FB.init({
-      appId      : <%=ENV['FACEBOOK_APP_ID']%>, // App ID
+      appId      : 2, // App ID
       channelUrl : 'http://viagg.io/channel.html', // Channel File
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
